# public/api-docs/models/openapi.yaml
@@ -27,6 +27,8 @@ tags:
     description: Person management
   - name: '💡 Entities'
     description: Entity management
+  - name: '💡 Associations'
+    description: Association management
 
 paths:
   '/access_token':
@@ -853,14 +855,14 @@ paths:
             Allow:
               $ref: '#/components/headers/Allow'
 
-  '/entities/{entityId}':
+  '/entities/{entitiId}':
     parameters:
-      - $ref: '#/components/parameters/entityId'
+      - $ref: '#/components/parameters/entitiId'
     get:
       tags:
         - '💡 Entities'
       summary: Retrieves a Entity resource based on a single ID.
-      description: Returns the entity identified by `entityId`.
+      description: Returns the entity identified by `entitiId`.
       operationId: readEntity
       # security:
       #   - MiWApiSecurity: [ reader ]
@@ -880,7 +882,7 @@ paths:
       tags:
         - '💡 Entities'
       summary: Updates the Entity resource.
-      description: Updates the entity identified by `entityId`.
+      description: Updates the entity identified by `entitiId`.
       operationId: updateEntity
       security:
         - MiWApiSecurity: [ writer ]
@@ -909,7 +911,7 @@ paths:
       tags:
         - '💡 Entities'
       summary: Removes the Entity resource.
-      description: Deletes the entity identified by `entityId`.
+      description: Deletes the entity identified by `entitiId`.
       operationId: deleteEntity
       security:
         - MiWApiSecurity: [ writer ]
@@ -950,15 +952,15 @@ paths:
         '404':
           $ref: '#/components/responses/Response_404'
 
-  '/entities/{entityId}/{elementType}':
+  '/entities/{entitiId}/{elementType}':
     parameters:
-      - $ref: '#/components/parameters/entityId'
+      - $ref: '#/components/parameters/entitiId'
       - $ref: '#/components/parameters/elementEntityRelParam'
     get:
       tags:
         - '💡 Entities'
       summary: List of elements related to the entity
-      description: Returns the elements related to the entity `entityId`
+      description: Returns the elements related to the entity `entitiId`
       operationId: readEntityElements
       # security:
       #   - MiWApiSecurity: [ reader ]
@@ -995,9 +997,9 @@ paths:
             Allow:
               $ref: '#/components/headers/Allow'
 
-  '/entities/{entityId}/{elementType}/{operationType}/{entityId}':
+  '/entities/{entitiId}/{elementType}/{operationType}/{entityId}':
     parameters:
-      - $ref: '#/components/parameters/entityId'
+      - $ref: '#/components/parameters/entitiId'
       - $ref: '#/components/parameters/elementEntityRelParam'
       - $ref: '#/components/parameters/operationParam'
       - $ref: '#/components/parameters/entityId'
@@ -1033,6 +1035,259 @@ paths:
       responses:
         '204':
           $ref: '#/components/responses/Response_Options'
+
+  '/associations':
+    get:
+      tags:
+        - '💡 Associations'
+      summary: Retrieves the collection of Association resources.
+      description: Returns all associations from the system that the user has access to.
+      operationId: readAssociations
+      # security:
+      #   - MiWApiSecurity: [ reader ]
+      parameters:
+        - $ref: '#/components/parameters/orderParam'
+        - $ref: '#/components/parameters/orderingParam'
+      responses:
+        '200':
+          description: Array of associations
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  associations:
+                    description: Associations array
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Association'
+          headers:
+            ETag:
+              $ref: '#/components/headers/ETag'
+        '404':
+          $ref: '#/components/responses/Response_404'
+    post:
+      tags:
+        - '💡 Associations'
+      summary: Creates a Association resource.
+      description: Creates a new association
+      operationId: createAssociation
+      security:
+        - MiWApiSecurity: [ writer ]
+      requestBody:
+        $ref: '#/components/requestBodies/ElementRequestBody'
+      responses:
+        '201':
+          description: '`Created`: association created'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Association'
+          headers:
+            Location:
+              $ref: '#/components/headers/Location'
+        '400':
+          $ref: '#/components/responses/Response_400'
+        '401':
+          $ref: '#/components/responses/Response_401'
+        '403':
+          $ref: '#/components/responses/Response_403'
+        '422':
+          $ref: '#/components/responses/Response_422'
+    options:
+      tags:
+        - '💡 Associations'
+      summary: Provides the list of HTTP supported methods.
+      description: Return a `Allow` header with a comma separated list of HTTP supported methods.
+      operationId: cOptionsAssociation
+      responses:
+        '204':
+          description: '`Allow` header &lt;Response body is empty&gt;'
+          headers:
+            Allow:
+              $ref: '#/components/headers/Allow'
+
+  '/associations/{associationId}':
+    parameters:
+      - $ref: '#/components/parameters/associationId'
+    get:
+      tags:
+        - '💡 Associations'
+      summary: Retrieves a Association resource based on a single ID.
+      description: Returns the association identified by `associationId`.
+      operationId: readAssociation
+      # security:
+      #   - MiWApiSecurity: [ reader ]
+      responses:
+        '200':
+          description: Association
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Association'
+          headers:
+            ETag:
+              $ref: '#/components/headers/ETag'
+        '404':
+          $ref: '#/components/responses/Response_404'
+    put:
+      tags:
+        - '💡 Associations'
+      summary: Updates the Association resource.
+      description: Updates the association identified by `associationId`.
+      operationId: updateAssociation
+      security:
+        - MiWApiSecurity: [ writer ]
+      requestBody:
+        $ref: '#/components/requestBodies/ElementRequestBody'
+      parameters:
+        - $ref: '#/components/parameters/ifMatchParam'
+      responses:
+        '209':
+          description: '`Content Returned`: association previously existed and is now updated'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Association'
+        '400':
+          $ref: '#/components/responses/Response_400'
+        '401':
+          $ref: '#/components/responses/Response_401'
+        # '403':
+        #   $ref: '#/components/responses/Response_403'
+        '404':
+          $ref: '#/components/responses/Response_404'
+        '412':
+          $ref: '#/components/responses/Response_412'
+    delete:
+      tags:
+        - '💡 Associations'
+      summary: Removes the Association resource.
+      description: Deletes the association identified by `associationId`.
+      operationId: deleteAssociation
+      security:
+        - MiWApiSecurity: [ writer ]
+      responses:
+        '204':
+          description: Association deleted &lt;Response body is empty&gt;
+        '401':
+          $ref: '#/components/responses/Response_401'
+        # '403':
+        #   $ref: '#/components/responses/Response_403'
+        '404':
+          $ref: '#/components/responses/Response_404'
+    options:
+      tags:
+        - '💡 Associations'
+      summary: Provides the list of HTTP supported methods.
+      description: Return a `Allow` header with a comma separated list of HTTP supported methods.
+      operationId: optionsAssociation
+      responses:
+        '204':
+          description: '`Allow` header &lt;Response body is empty&gt;'
+          headers:
+            Allow:
+              $ref: '#/components/headers/Allow'
+
+  '/associations/associationname/{associationname}':
+    get:
+      tags:
+        - '💡 Associations'
+      summary: Determines if associationname exists
+      description: Returns status code 204 if `associationname` exists.
+      operationId: existsAssociation
+      parameters:
+        - $ref: '#/components/parameters/associationName'
+      responses:
+        '204':
+          description: Associationname exists &lt;Response body is empty&gt;
+        '404':
+          $ref: '#/components/responses/Response_404'
+
+  '/associations/{associationId}/{elementType}':
+    parameters:
+      - $ref: '#/components/parameters/associationId'
+      - $ref: '#/components/parameters/elementAssociationRelParam'
+    get:
+      tags:
+        - '💡 Associations'
+      summary: List of elements related to the association
+      description: Returns the elements related to the association `associationId`
+      operationId: readAssociationElements
+      # security:
+      #   - MiWApiSecurity: [ reader ]
+      responses:
+        '200':
+          description: Array of Elements
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  entities:
+                    description: Element array
+                    type: array
+                    items:
+                      $ref: '#/components/schemas/Element'
+          headers:
+            ETag:
+              $ref: '#/components/headers/ETag'
+        # '401':
+        #   $ref: '#/components/responses/Response_401'
+        '404':
+          $ref: '#/components/responses/Response_404'
+    options:
+      tags:
+        - '💡 Associations'
+      summary: Provides the list of HTTP supported methods.
+      description: Return a `Allow` header with a comma separated list of HTTP supported methods.
+      operationId: optionsAssociationElements
+      responses:
+        '204':
+          description: '`Allow` header &lt;Response body is empty&gt;'
+          headers:
+            Allow:
+              $ref: '#/components/headers/Allow'
+
+  '/associations/{associationId}/{elementType}/{operationType}/{entityId}':
+    parameters:
+      - $ref: '#/components/parameters/associationId'
+      - $ref: '#/components/parameters/elementAssociationRelParam'
+      - $ref: '#/components/parameters/operationParam'
+      - $ref: '#/components/parameters/entityId'
+    put:
+      tags:
+        - '💡 Associations'
+      summary: Sets or remove the relationship association-element
+      description: Establishes/Removes the relationship of the association with the element
+      operationId: api_associations_add_rem_element
+      security:
+        - MiWApiSecurity: [ writer ]
+      responses:
+        '209':
+          description: '`Content Returned`: association is now updated'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Association'
+        '401':
+          $ref: '#/components/responses/Response_401'
+        '403':
+          $ref: '#/components/responses/Response_403'
+        '404':
+          $ref: '#/components/responses/Response_404'
+        '406':
+          $ref: '#/components/responses/Response_406'
+    options:
+      tags:
+        - '💡 Associations'
+      summary: Provides the list of HTTP supported methods.
+      description: Return a `Allow` header with a comma separated list of HTTP supported methods.
+      operationId: optionsAssociationsOpEntity
+      responses:
+        '204':
+          $ref: '#/components/responses/Response_Options'
+
 
 
 components:
@@ -1192,6 +1447,11 @@ components:
               type: array
               items:
                 type: integer
+            associations:
+              description: Array of Association Ids
+              type: array
+              items:
+                type: integer
       example:
         entity:
           id: 2
@@ -1202,6 +1462,26 @@ components:
           wikiUrl: 'https://wiki02.example.com/Entity02'
           products: [ 1, 7 ]
           persons: [ 3, 17 ]
+          associations: [2]
+    Association:
+      allOf:
+        - $ref: '#/components/schemas/Element'
+        - type: object
+          properties:
+            entities:
+              description: Array of Entity Ids
+              type: array
+              items:
+                type: integer
+      example:
+        association:
+          id: 7
+          name: Association07
+          birthDate: '2020-01-01'
+          deathDate: '2250-12-25'
+          imageUrl: 'https://image07.example.com/Association07.png'
+          wikiUrl: 'https://wiki07.example.com/Association07'
+          entities: [ 2 ]
     Message:
       type: object
       description: HTTP response message
@@ -1428,10 +1708,28 @@ components:
         type: integer
         format: int64
         pattern: ^\d+$
+    entitiId:
+      name: entitiId
+      in: path
+      description: ID of entity
+      required: true
+      schema:
+        type: integer
+        format: int64
+        pattern: ^\d+$
     entityId:
       name: entityId
       in: path
       description: ID of entity
+      required: true
+      schema:
+        type: integer
+        format: int64
+        pattern: ^\d+$
+    associationId:
+      name: associationId
+      in: path
+      description: ID of association
       required: true
       schema:
         type: integer
@@ -1465,6 +1763,14 @@ components:
       name: entityname
       in: path
       description: Entity name
+      required: true
+      schema:
+        type: string
+        pattern: '^[a-zA-Z0-9()áéíóúÁÉÍÓÚñÑ %$\.+-]+$'
+    associationName:
+      name: associationname
+      in: path
+      description: Association name
       required: true
       schema:
         type: string
@@ -1538,7 +1844,7 @@ components:
       schema:
         enum:
           - entities
-          - product
+          - products
 
     elementEntityRelParam:
       name: elementType
@@ -1547,12 +1853,27 @@ components:
         Sets the type of item related to the Entity:
         <li><b>products</b>: Products type element
         <li><b>persons</b>: Persons type element
+        <li><b>associations</b>: Associations type element
+
 
       required: true
       schema:
         enum:
           - persons
-          - product
+          - products
+          - associations
+
+    elementAssociationRelParam:
+      name: elementType
+      in: path
+      description: |-
+        Sets the type of item related to the Association:
+        <li><b>entities</b>: Entities type element
+
+      required: true
+      schema:
+        enum:
+          - entities
 
   headers:
     ETag:
